cilium/policies-clustermesh-gcore-manassas.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: clustermesh-nginx-from-hetzner-helsinki-kube-public-debug-ubuntu
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: nginx
      k8s:app.kubernetes.io/name: nginx
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: hetzner-helsinki
            io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-public
            app: debug-ubuntu
        - matchLabels:
            io.cilium.k8s.policy.cluster: hetzner-helsinki
            io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: default
            app: debug-ubuntu

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: endpoint-external-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: nginx
  ingress:
    - fromCIDRSet:
        - cidrGroupRef: ssb-provider
        - cidrGroupRef: piano-cato-network
